--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -7,5 +7,38 @@
   "confirm_password": "تأكيد كلمة المرور",
   "logout": "تسجيل الخروج",
   "language": "اللغة",
-  "dark_mode": "الوضع الداكن"
+  "dark_mode": "الوضع الداكن",
+  "paired_user": "المستخدم المقترن",
+  "no_paired_user_found": "لم يتم العثور على مستخدم مقترن",
+  "map": "الخريطة",
+  "chat": "الدردشة",
+  "qr": "رمز الاستجابة السريعة",
+  "settings": "الإعدادات",
+  "qr_actions": "إجراءات QR",
+  "scan_to_pair_with_user": "امسح للاتصال بمستخدم",
+  "your_qr_code": "رمز QR الخاص بك",
+
+  "enter_your_email": "أدخل بريدك الإلكتروني",
+  "invalid_email": "بريد إلكتروني غير صالح",
+  "enter_your_password": "أدخل كلمة المرور",
+  "min_6_characters": "الحد الأدنى 6 أحرف",
+  "dont_have_account": "ليس لديك حساب؟ سجل الآن",
+ "no_device_paired": "لا يوجد جهاز مقترن بعد.",
+  "paired_with": "مقترن مع:\n{token}",
+  "scan_partner_qr": "امسح رمز شريكك",
+   "back": "رجوع",
+  "register": "تسجيل",
+  "registering": "جارٍ التسجيل...",
+  "name": "الاسم",
+  "enter_your_name": "أدخل اسمك",
+  "name_required": "الاسم مطلوب",
+  "phone": "رقم الهاتف",
+  "enter_your_phone": "أدخل رقم هاتفك",
+  "phone_required": "رقم الهاتف مطلوب",
+  "country": "الدولة",
+  "select_country": "يرجى اختيار الدولة",
+  "country_load_error": "خطأ في تحميل قائمة الدول",
+
+  "reenter_password": "أعد إدخال كلمة المرور",
+  "passwords_do_not_match": "كلمتا المرور غير متطابقتين"
 }
