--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -45,5 +45,13 @@
   "paired_with_user": "مقترن مع {name} ({email})",
   "scan_to_pair": "امسح رمز الاستجابة السريعة للاقتران مع الجهاز",
   "pairing_successful": "تم الاقتران بنجاح مع {name}",
-  "scan_qr": "مسح رمز الاستجابة السريعة"
+  "scan_qr": "مسح رمز الاستجابة السريعة",
+  "home": "الرئيسية",
+  "chat_list": "قائمة المحادثات",
+  "location": "الموقع",
+  "map_view": "عرض الخريطة",
+  "invalid_qr": "رمز QR غير صالح",
+  "please_login": "يرجى تسجيل الدخول أولاً",
+  "scan_to_pair_user": "امسح للاتصال بالمستخدم"
+
 }
